--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <!-- Font bold -->
 <h1 class="font-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, accusamus ullam, quae eveniet adipisci dolore sed, laboriosam consectetur veniam praesentium repellendus? Unde delectus est illo nostrum labore, vel architecto voluptatibus.</h1>
+<h2 class="font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, esse dignissimos! Nesciunt atque delectus placeat expedita! Suscipit, cupiditate hic. Earum iure ipsa eveniet consectetur magni quae impedit voluptas commodi consequatur.</h2>
 </body>
 </html>
